--- a/cv.tex
+++ b/cv.tex
@@ -19,10 +19,25 @@
   \section{languages}
     English \& Hindi
   \section{programming}
-    {\color{red} $\varheartsuit$} Java(Android)
+    {\color{red} $\varheartsuit$} Java(Android),Xml
     C And C++
     Python
     CSS3 \& HTML5
+  \section{coursework}
+    Calculus
+    Linear Algebra
+    Data Structures
+    Algorithms
+    Ordinary differential equations and
+    complex analysis
+    Discrete Mathematics
+    Partial Differential Equations
+    Data Modeling \& Design
+    Operating System
+    Computational Linguistics
+    Analog Electronic
+    Business, Entrepreneurship and
+    Innovation Management
 \end{aside}
 
 \section{interests}
@@ -35,13 +50,13 @@ Android Development, Learning in computer algorithms , Android Animation, Web de
 \begin{entrylist}
   \entry
     {2015}
-    {Graduation {\normalfont UNIVERSITY OF DELHI}}
+    {Graduation {\normalfont University of delhi}}
     {4th Sem | Delhi}
     {\emph{B.Tech In IT With Mathmatical Innovation}}
   \entry
-    {since 2012} 
-    {Schooling complete At R.P.V.V.SCHOOL}
-    {}
+    {2012} 
+    {Intermediate}
+    {RPVV Yamuna Vihar, Central Board of Secondary Education}
     {May 2012 | Delhi, India}
 \end{entrylist}
 
