Dukhabar.com added

--- a/cv.tex
+++ b/cv.tex
@@ -91,9 +91,10 @@ Android Development, Learning in computer algorithms , Android Animation, Web de
 \begin{entrylist}
   \entry
     {2015}
-    {\href{https://github.com/teamDAPSR/Trees-of-Delhi}{Tree Of Delhi}}
+    {{Dukhabar.com official App}}
     {{Delhi}}
-    {{Acadmic Project(Apr-Going On)} \\This is an Android App which will help us to identify Tree of Delhi on the basis of leafs.}
+    {{Summer Internship project(june-Going On)} \\This Android Application shows Delhi University news
+    provided by Dukhabar.com , App fetch the news in app using web-api and show in beautiful manner and saving data to sdcard to use in offline mode , Full App in Material design.}
 
   \entry
     {2015}
