--- a/cv.tex
+++ b/cv.tex
@@ -75,8 +75,8 @@ Android Development, Learning in computer algorithms , Android Animation, Web de
     {Delhi}
     {\emph{Summer Intern(Aug-Sept)}\\ Android developer, Developed an Android App for innovation submit of phd chamber. \begin{itemize}
     \item Collect the data of MSMEs including PHD chamber, NSIC, Niesbud, SIDBI etc.Categorize the data in five different sectors: Finance, Marketing, Trading,Schemes and News.
-    \item Developed an android mobile application for MSMEs consist of the categorized data of MSMEs.
-    \item Launched in Innovation Summit of PHD Chamber
+    % \item Developed an android mobile application for MSMEs consist of the categorized data of MSMEs.
+    % \item Launched in Innovation Summit of PHD Chamber
     \end{itemize}}
   % \entry
   %   {06–08 2007}
@@ -94,14 +94,18 @@ Android Development, Learning in computer algorithms , Android Animation, Web de
     {{Dukhabar.com official App}}
     {{Delhi}}
     {{Summer Internship project(june-Going On)} \\This Android Application shows Delhi University news
-    provided by Dukhabar.com , App fetch the news in app using web-api and show in beautiful manner and saving data to sdcard to use in offline mode , Full App in Material design.}
+    provided by Dukhabar.com , 
+    % App fetch the news in app using web-api and show in beautiful manner and saving data to sdcard to use in offline mode , Full App in Material design.
+    }
 
   \entry
     {2015}
     {\href{https://github.com/teamDAPSR/Antardhvani}{Antardhvani}}
     {{Delhi}}
-    {{Official Android App of Cultral Festival Of University Of Delhi(Feb)} \\Official app for Antardhvani. This app is open source, source code can be found at above link\\
-    Features :\\ • Location map using google map api. • App is upto latest Material design with parallax header. • Animated splash screen. and • Push notification}
+    {{Official Android App of Cultral Festival Of University Of Delhi(Feb)} \\Official app for Antardhvani. 
+    % This app is open source, source code can be found at above link\\
+    % Features :\\ • Location map using google map api. • App is upto latest Material design with parallax header. • Animated splash screen. and • Push notification
+    }
 
   \entry
     {2015}
@@ -113,8 +117,9 @@ Android Development, Learning in computer algorithms , Android Animation, Web de
     {\href{https://github.com/therajanmaurya/Flashing-Light}{Flashing-Light}}
     {Delhi}
     {This Android App is helping hand of disable people
-    Feature:\\• Start Flashing Light whenever phone ringing. \\
-    • Whenever phone ringing "saying caller name".\\
-    • Manually Enable And Disable Flashing Light. }
+    % Feature:\\• Start Flashing Light whenever phone ringing. \\
+    % • Whenever phone ringing "saying caller name".\\
+    % • Manually Enable And Disable Flashing Light. 
+    }
 \end{entrylist}
 \end{document}
